src/namespace-resource.yml
apiVersion: v1
kind: Namespace
metadata:
  name: project2
