src/env_config.yml
apiVersion: v1
kind: Pod
metadata:
  name: environmental-pod
  labels:
    app: env-app
spec:
  containers:
  - name: env-container
    image: gcr.io/google-samples/node-hello:1.0
    ports:
    - containerPort: 5000
    resources:
      limits:
        memory: "250Mi"
        cpu: "500m"
