src/namespace.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: project1
spec: 
  containers: 
  - name: pravesh-nginx1
    image: nginx
    ports: 
    - containerPort: 8080
