src/pod2.yml
apiVersion: v1
kind: Pod
metadata: 
  name: multicontainer
spec: 
  containers:
  - name: pravesh-nginx1
    image: nginx
    ports:
    - containerPort: 8080
  - name: container2
    image: afakharany/watcher
