src/pod3.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
spec:
  containers: 
  - name : pravesh-arjun
    image: arjunachari12/k8s-demo
    ports: 
     - containerPort: 8080
