src/custom-project-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: display-name
  template:
    metadata:
        labels:
          app: display-name
    spec:
      containers:
        - name: pravesh-container
          image: niharkn07/nihar-repo-07
          ports:
            - containerPort: 5000
          resources:
            limits: 
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            timeoutSeconds: 30
          readinessProbe:
            httpGet: 
              path: /
              port: 5000
            initialDelaySeconds: 15
            timeoutSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: pravesh-service
spec:
  ports:
    - port: 31001
      nodePort: 31002
      targetPort: 5000
      protocol: TCP
  selector:
    app: display-name
  type: NodePort
