src/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: display-hello
  template:
    metadata:
      labels:
        app: display-hello
    spec:
      containers: 
        - name :  pravesh-k8sdemo
          image: arjunachari12/k8s-demo
          ports:
            - name: pod-port
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
    - port: 31001
      nodePort: 31002
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: display-hello
